@@ -1,5 +1,15 @@
-MD5 c3310c0e796fe77f85f21470f705ea72 bmp-infopipe-1.3.ebuild 1102
-MD5 9ee240742409d2e62fd951e0cf948893 ChangeLog 580
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 5ddb31c18e78ede55de954bcac3c9aca ChangeLog 686
+MD5 03203b5b75b067dda6273de7aafe86ec bmp-infopipe-1.3.ebuild 1111
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 8e38192b2a16d55fd9d4b8cf8843be7c files/digest-bmp-infopipe-1.3 149
 MD5 44ace0114de0b3fe95af00c736d1bbd1 files/1.3-includes.patch 405
+MD5 8e38192b2a16d55fd9d4b8cf8843be7c files/digest-bmp-infopipe-1.3 149
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.0 (GNU/Linux)
+
+iD8DBQFB7DaBArHZZzCEUG0RAnljAJ4vhDnfyPenQCrXWas8LDn1b/9j8gCfTBEm
+9JWqpG3C+ivMHqeimK5+BIk=
+=PP2W
+-----END PGP SIGNATURE-----
